kubernetes/traefik/external-services/rancher/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.rancher.manly.dylangroff.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80
          scheme: https
          passHostHeader: true
    - match: Host(`rancher.manly.dylangroff.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80
          scheme: https
          passHostHeader: true
      middlewares:
        - name: default-headers
  tls:
    secretName: manly-dylangroff-tls-production
